--- a/pages/checkoutPage/checkout-page-2.html
+++ b/pages/checkoutPage/checkout-page-2.html
@@ -46,9 +46,9 @@
 
             <strong> รายละเอียดการจอง </strong><br>
             <div class="product">
-                <img src="../../img/ร้าน-2.png" alt="ร้านค้า" class="logo">
+                <img src="../../img/ร้าน-3.png" alt="ร้านค้า" class="logo">
                 <div class="product-info">
-                    <strong>ร้าน  Pet Daycare</strong><br>
+                    <strong>ร้าน MoSo hotel</strong><br>
                     <strong style="font-size: medium; color: gray;">เลือกเวลาทำการจอง</strong><br>
 
                     <label for="bookingDate">เลือกวันที่จอง:</label>&emsp;&emsp;&emsp;
