--- a/pages/payment/payment.html
+++ b/pages/payment/payment.html
@@ -25,6 +25,7 @@
     <script src="../../js/payment.js"></script>
     <script src="../../js/edit-address.js"></script>
 
+
 </head>
 
 <body>
@@ -61,6 +62,40 @@
                     SLEEKY สลิคกี้ แชมพูบำรุงขนและผิวหนัง&emsp;&emsp;&emsp;฿50
                 </div>
             </div>
+            <!-- Modal แสดงรายละเอียดร้าน -->
+            <div id="productModal" class="modal">
+                <div class="modal-content">
+                    <span class="close" onclick="closeModal()">&times;</span>
+
+                    <div class="modal-body">
+                        <!-- ซ้าย: ข้อมูลร้าน -->
+                        <section class="shop-info">
+                            <h2 id="shopName"></h2>
+                            <img id="shopLogo" src="" alt="Shop Logo" class="shop-logo">
+
+                            <h3>รายละเอียดการจอง</h3>
+                            <p><strong>สัตว์เลี้ยง:</strong> <span id="petType"></span></p>
+                            <p><strong>บริการที่เลือก:</strong> <span id="serviceType"></span></p>
+                            <p><strong>ราคา:</strong> ฿<span id="servicePrice"></span></p>
+                        </section>
+
+                        <!-- ขวา: เลือกวัน/เวลา & แผนที่ -->
+                        <section class="booking-info">
+                            <label for="bookingDate">เลือกวันที่จอง:</label>
+                            <input type="date" id="bookingDate">
+
+                            <label for="bookingTime">เลือกเวลา:</label>
+                            <input type="time" id="bookingTime">
+
+                            <h3>ที่ตั้งร้าน</h3>
+                            <div id="map"></div>
+
+                            <button onclick="saveBooking()">บันทึกการเปลี่ยนแปลง</button>
+                        </section>
+                    </div>
+                </div>
+            </div>
+
 
             <strong>รายละเอียดการจอง</strong>
             <div class="address">
