--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 
     <!-- Title -->
     <title>Buddy Nest - Home page</title>
-    <<link rel="stylesheet" href="../../google-site-verification: google8362137d046c852a.html">
+    <meta name="google-site-verification" content="AHjiNjCvHqfmfpK0JEL6ox2DBY4U9LXxCnkzmU01TYc" />
 
-        <!-- CSS -->
-        <link rel="stylesheet" href="../../assets/css/globals.css">
-        <link rel="stylesheet" href="../../assets/css/navbar.css">
-        <link rel="stylesheet" href="../../assets/css/header.css">
-        <link rel="stylesheet" href="../../assets/css/footer.css">
-        <link rel="stylesheet" href="../../assets/css/search-1.css">
-        <link rel="stylesheet" href="../../assets/css/cards.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="../../assets/css/globals.css">
+    <link rel="stylesheet" href="../../assets/css/navbar.css">
+    <link rel="stylesheet" href="../../assets/css/header.css">
+    <link rel="stylesheet" href="../../assets/css/footer.css">
+    <link rel="stylesheet" href="../../assets/css/search-1.css">
+    <link rel="stylesheet" href="../../assets/css/cards.css">
 
-        <!--JavaScript -->
-        <script defer src="../../js/logo.js"></script>
-        <script defer src="../../js/search.js"></script>
-        <script defer src="../../js/cards.js"></script>
+    <!--JavaScript -->
+    <script defer src="../../js/logo.js"></script>
+    <script defer src="../../js/search.js"></script>
+    <script defer src="../../js/cards.js"></script>
 </head>
 
 <body>
